--- a/NoteApp/NoteApp.csproj
+++ b/NoteApp/NoteApp.csproj
@@ -46,6 +46,7 @@
   <ItemGroup>
     <Compile Include="Note.cs" />
     <Compile Include="NoteCategory.cs" />
+    <Compile Include="Project.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
