Добавления папка Resources с иконками для кнопок,так же добавлены иконки на кнопках.

--- a/NoteAppUI/NoteAppUI.csproj
+++ b/NoteAppUI/NoteAppUI.csproj
@@ -98,5 +98,8 @@
       <Name>NoteApp</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Resources\" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
