Добавлены классы  тестирования в NoteTests.cs

--- a/NoteApp.UnitTests/NoteApp.UnitTests.csproj
+++ b/NoteApp.UnitTests/NoteApp.UnitTests.csproj
@@ -56,6 +56,12 @@
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\NoteApp\NoteApp.csproj">
+      <Project>{e1ca0e12-80fb-4117-837c-50f1789e68cc}</Project>
+      <Name>NoteApp</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
