--- a/src/WindowsFormsApp1/Installer.csproj
+++ b/src/WindowsFormsApp1/Installer.csproj
@@ -70,5 +70,8 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Inno Setup Files\" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
