--- a/src/NoteAppUI/NoteAppUI.csproj
+++ b/src/NoteAppUI/NoteAppUI.csproj
@@ -108,4 +108,12 @@
     <Folder Include="Resources\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <PropertyGroup>
+    <PostBuildEvent>md "$(SolutionDir)InstallScripts"
+md "$(SolutionDir)InstallScripts\Release"
+md "$(SolutionDir)InstallScripts\Installers"
+xcopy /q /y "$(ProjectDir)$(OutDir)*.dll" "$(SolutionDir)InstallScripts\Release"
+xcopy /q /y "$(ProjectDir)$(OutDir)*.exe" "$(SolutionDir)InstallScripts\Release"
+</PostBuildEvent>
+  </PropertyGroup>
 </Project>
