--- a/src/NoteAppUI/NoteAppUI.csproj
+++ b/src/NoteAppUI/NoteAppUI.csproj
@@ -109,11 +109,7 @@
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
-    <PostBuildEvent>md "$(SolutionDir)InstallScripts"
-md "$(SolutionDir)InstallScripts\Release"
-md "$(SolutionDir)InstallScripts\Installers"
-xcopy /q /y "$(ProjectDir)$(OutDir)*.dll" "$(SolutionDir)InstallScripts\Release"
-xcopy /q /y "$(ProjectDir)$(OutDir)*.exe" "$(SolutionDir)InstallScripts\Release"
-</PostBuildEvent>
+    <PostBuildEvent>
+    </PostBuildEvent>
   </PropertyGroup>
 </Project>
