Добавлен не работающий скрипт Installer.

--- a/src/Installer/Installer.csproj
+++ b/src/Installer/Installer.csproj
@@ -48,4 +48,8 @@
     <Folder Include="Inno Setup Files\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <PropertyGroup>
+    <PostBuildEvent>"$(SolutionDir)packages\Tools.InnoSetup.6.1.2\tools\ISCC.exe" "$(SolutionDir)InstallScripts\installer.iss"
+rd "$(SolutionDir)InstallScripts\Release"</PostBuildEvent>
+  </PropertyGroup>
 </Project>
