Добавлен скрипт Installer в visual studio

--- a/src/Installer/Installer.csproj
+++ b/src/Installer/Installer.csproj
@@ -44,8 +44,9 @@
     <Compile Include="Class1.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
-    <Folder Include="Inno Setup Files\" />
+    <Content Include="Inno Setup Files\Installer.iss" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
