--- a/src/NoteApp.UnitTests/NoteApp.UnitTests.csproj
+++ b/src/NoteApp.UnitTests/NoteApp.UnitTests.csproj
@@ -62,9 +62,9 @@
     </None>
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\NoteApp\NoteApp.csproj">
+    <ProjectReference Include="..\NoteApp\NoteApp.Model.csproj">
       <Project>{e1ca0e12-80fb-4117-837c-50f1789e68cc}</Project>
-      <Name>NoteApp</Name>
+      <Name>NoteApp.Model</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup />
